[package]
name = "pngme"
version = "0.1.0"
edition = "2021"
description = "simple command-line utility to encode and decode secret messages in png files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
crc = "3.0"
